fix text-align techniques

--- a/styles/style.css
+++ b/styles/style.css
@@ -187,6 +187,7 @@
 }
 
 .cards__title {
+  text-align: center;
   margin: 43px auto 16px;
   line-height: 1.15;
   font-size: 24px;
